# Dual-axis_gimbal

./: README.md  example.py
IMU_ATK901/: ATK_901.py  example.py
example_cpp/: CMakeLists.txt
example_cpp/src/: example.cpp
example_py/: example.py
haitai_motor_py/: haitai_motor_multi.py
weite_IMU_STM32/: IMU.ioc
weite_IMU_STM32/BSP/: JY901S.c  JY901S.h  oled.h  sys.h
weite_IMU_STM32/Core/Src/: gpio.c  main.c  stm32f1xx_it.c  tim.c
weite_IMU_STM32/MDK-ARM/: IMU.uvguix.14175  IMU.uvoptx  IMU.uvprojx  startup_stm32f103xe.lst
weite_IMU_STM32/MDK-ARM/IMU/: IMU.axf  IMU.build_log.htm  IMU.hex  IMU.htm  IMU.lnp  IMU.map  IMU_IMU.dep  delay.crf  delay.d  gpio.crf  gpio.d  i2c.crf  i2c.d  jy901s.crf  jy901s.d  main.crf  main.d  oled.crf  oled.d  startup_stm32f103xe.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.crf  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_i2c.crf  stm32f1xx_hal_i2c.d  stm32f1xx_hal_msp.crf  stm32f1xx_hal_msp.d  (+24 more)
weite_IMU_STM32/MDK-ARM/RTE/_IMU/: RTE_Components.h
weite_IMU_python/: weite_imu.py  weite_imu_example.py
